# babyname

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml
src/: App.tsx
src/components/: AnalysisControls.css  AnalysisControls.tsx  Badge.css  Badge.tsx  Button.css  Button.tsx  Card.css  Card.tsx  ChatInterface.css  ChatInterface.tsx  DataChart.css  DataChart.tsx  DataTable.css  DataTable.tsx  EmptyState.css  EmptyState.tsx  ErrorMessage.css  ErrorMessage.tsx  Header.css  Header.tsx  Input.css  Input.tsx  ResultsDisplay.css  ResultsDisplay.tsx  SavedQueries.css  SavedQueries.tsx  Select.css  Select.tsx  Spinner.css  Tabs.css  Tabs.tsx  Textarea.css  Textarea.tsx
src/hooks/: useApi.ts
src/lib/: api.ts  mock-data.ts  types.ts  utils.ts  validators.ts
src/pages/: Home.css  Home.tsx
src/styles/: index.css
src/test/: Button.test.tsx
